--- a/stock/templates/stock/pages/index.html
+++ b/stock/templates/stock/pages/index.html
@@ -2,6 +2,13 @@
 {% block title %}Hello world{% endblock title %}
 {% block content %}
 
-    <h1>Hello world</h1>
+    {% include 'partials/navbar.html' %}
+
+    <div class="container mt-3">
+        <h1>Hello world</h1>
+        <button class="btn btn-dark">Validar</button>
+        {% include '../partials/tablePartial.html' %}
+    </div>
+
 
 {% endblock content %}
