--- a/user/templates/user/pages/login.html
+++ b/user/templates/user/pages/login.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Foscatur - Login{% endblock title %}
+{% block title %}Login{% endblock title %}
 {% block content %}
 
     <div class="card form-user">
         <div class="card-header">
-            <h1>Foscatur - Faça login</h1>
+            <h1>Faça login</h1>
         </div>
         <div class="card-body">
             <form action="{% url 'user:signin' %}" method="post">
