--- a/user/templates/user/pages/profile.html
+++ b/user/templates/user/pages/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Foscatur - Profile{% endblock title %}
+{% block title %}Profile{% endblock title %}
 
 {% block content %}
 
-    {% include 'partials/navbar.html' %}
+    {% include 'partials/_sidebar.html' %}
 
     {% if messages %}
         {% for message in messages %}
