--- a/user/templates/user/pages/register.html
+++ b/user/templates/user/pages/register.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Foscatur - Registro{% endblock title %}
+{% block title %}Registro{% endblock title %}
 {% block content %}
 
     <div class="card form-user">
         <div class="card-header">
-            <h1>Foscatur - Criar conta</h1>
+            <h1>Criar conta</h1>
         </div>
         <div class="card-body">
             <form action="{% url 'user:signup' %}" method="post">
