--- a/crud_fbv/templates/crud_fbv/pages/index.html
+++ b/crud_fbv/templates/crud_fbv/pages/index.html
@@ -6,30 +6,9 @@
     {% include 'partials/_sidebar.html' %}
 
     <main>
-        <div class="container-fluid mt-5">
-            <h1>CRUD Function based views</h1>
+        
+        {% include '../partials/_datatable.html' %}
 
-            <table class="table table-striped table-bordered table-hover">
-                <thead class="table-dark">
-                    <tr>
-                        <th>Nome</th>
-                        <th>E-mail</th>
-                        <th>Telefone</th>
-                        <th>Opções</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Pyxel Developers</td>
-                        <td>developer@pyxel.dev.br</td>
-                        <td>(XX) XXXXX-XXXX</td>
-                        <td>
-                            <button type="submit" class="btn btn-danger btn-sm">Remover</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </main>
 
 {% endblock content %}
