Removing style files

--- a/crud_fbv/templates/crud_fbv/pages/index.html
+++ b/crud_fbv/templates/crud_fbv/pages/index.html
@@ -3,11 +3,11 @@
 
 {% block content %}
     
-    {% include 'partials/_sidebar.html' %}
+    {% include 'partials/_navbar.html' %}
 
     <main>
         
-        {% include '../partials/_datatable.html' %}
+        <p>Conteudo</p>
 
     </main>
 
