--- a/user/templates/user/pages/profile.html
+++ b/user/templates/user/pages/profile.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    {% include 'partials/_sidebar.html' %}
+    {% include 'partials/_navbar.html' %}
 
     {% if messages %}
         {% for message in messages %}
