:sparkles: Installing AdminLTE static files

--- a/user/templates/user/pages/login.html
+++ b/user/templates/user/pages/login.html
@@ -28,7 +28,7 @@
                 {% endif %}
 
                 <button type="submit" class="btn btn-primary">Login</button>
-                <a class="ms-3" href="{% url 'user:register_view' %}">Criar conta</a>
+                <a class="ml-3" href="{% url 'user:register_view' %}">Criar conta</a>
             </form>
         </div>
     </div>
