--- a/user/templates/user/pages/register.html
+++ b/user/templates/user/pages/register.html
@@ -38,7 +38,7 @@
                 {% endif %}
 
                 <button type="submit" class="btn btn-primary">Cadastrar-se</button>
-                <a class="ms-3" href="{% url 'user:login_view' %}">Já tenho uma conta</a>
+                <a class="ml-3" href="{% url 'user:login_view' %}">Já tenho uma conta</a>
             </form>
         </div>
     </div>
