--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %} - Django Boilerplate</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <!-- Bootstrap datatable -->
+    <link rel="stylesheet" href="{% static 'plugins/datatable/css/dataTables.bootstrap5.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
@@ -17,7 +21,14 @@
     {% block content %}{% endblock content %}
 
     <!-- SCRIPTS -->
-    <!-- Custom JavaScript -->
+    <!-- Bootstrap JS -->
+    <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- Jquery -->
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- DataTable JS -->
+    <script type="text/javascript" src="{% static 'plugins/datatable/js/jquery.dataTables.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'plugins/datatable/js/dataTables.bootstrap5.min.js' %}"></script>
+    <!-- Custom JS -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
