:recycle: Reorganizing directory structure

--- a/apps/restaurant/templates/categories/partials/table_categories.html
+++ b/apps/restaurant/templates/categories/partials/table_categories.html
@@ -13,7 +13,7 @@
 </div>
 
 <!-- DISPLAING MESSAGE FEEDBACK -->
-{% include 'partials/_message.html' %}
+{% include 'partials/message.html' %}
 
 <!-- TABLE TO SHOW REGISTERED CATEGORIES -->
 <table class="table table-bordered table-striped mt-4">
