--- a/apps/restaurant/templates/products/pages/detail.html
+++ b/apps/restaurant/templates/products/pages/detail.html
@@ -5,6 +5,8 @@
 
     <main class="container my-3">
 
+        {% include 'partials/message.html' %}
+
         <div class="card">
             <div class="card-header">
                 Editar produto {{ product.name }}
