--- a/apps/restaurant/templates/products/partials/table_products.html
+++ b/apps/restaurant/templates/products/partials/table_products.html
@@ -1,6 +1,6 @@
 <h3 class="my-4">Lista de produtos</h3>
 
-{% include 'partials/_message.html' %}
+{% include 'partials/message.html' %}
 
 <table id="productTable" class="table table-striped table-bordered">
     <thead>
