:sparkles: feat: Restaurant system update

--- a/apps/restaurant/templates/categories/pages/index.html
+++ b/apps/restaurant/templates/categories/pages/index.html
@@ -2,7 +2,7 @@
 {% block title %}Categorias{% endblock title %}
 {% block content %}
 
-    {% include 'partials/navbar_restaurant.html' %}
+    {% include 'partials/_navbar.html' %}
 
     <main class="container-fluid my-5">
 
