--- a/apps/restaurant/templates/products/pages/index.html
+++ b/apps/restaurant/templates/products/pages/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    {% include 'partials/navbar_restaurant.html' %}
+    {% include 'partials/_navbar.html' %}
 
     <main class="container-fluid my-5">
 
