--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<img src="{% static 'img/logo.png' %}" alt="logomarca planeta das bebidas" class="m-auto d-block my-3" width="200px">
+<img src="{% static 'img/logo.png' %}" alt="logomarca planeta das bebidas" class="m-auto d-block my-2" width="300px">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
             <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Cadastrar
+                        Cadastro
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'restaurant:products_index' %}">Produtos</a></li>
@@ -22,10 +22,12 @@
                         Vendas
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item disabled" href="#">Comandas</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item disabled" href="#">Desabilitado</a></li>
+                        <li><a class="dropdown-item" href="{% url 'restaurant:cart_index' %}">Vender</a></li>
+                        <li><a class="dropdown-item" href="{% url 'restaurant:sales_index' %}">Lista/histórico</a></li>
                     </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'restaurant:purchases_index' %}">Compras</a>
                 </li>
             </ul>
         </div>
