Changing BS5 to Bulma

--- a/apps/restaurant/templates/products/partials/table_products.html
+++ b/apps/restaurant/templates/products/partials/table_products.html
@@ -2,7 +2,7 @@
 
 {% include 'partials/message.html' %}
 
-<table id="productTable" class="table table-striped table-bordered">
+<table class="table">
     <thead>
         <tr>
             <th>Produto</th>
