:recycle: Updating navbar classes

--- a/apps/restaurant/templates/purchases/pages/index.html
+++ b/apps/restaurant/templates/purchases/pages/index.html
@@ -2,14 +2,14 @@
 {% block title %}Compra de produtos{% endblock title %}
 {% block content %}
 
-  {% include 'partials/_navbar.html' %}
+  {% include 'partials/navbar.html' %}
 
   <div class="container">
-    <h1 class="my-3">Compra de produtos</h1>
+    <h1 class="title my-3">Compra de produtos</h1>
 
     {% include '../partials/form_purchase.html' %}
 
-    {% include 'partials/_message.html' %}
+    {% include 'partials/message.html' %}
 
     {% include '../partials/table_purchase.html' %}
   </div>
