--- a/apps/restaurant/templates/cart/pages/index.html
+++ b/apps/restaurant/templates/cart/pages/index.html
@@ -2,7 +2,7 @@
 {% block title %}Vendas{% endblock title %}
 {% block content %}
 
-  {% include 'partials/_navbar.html' %}
+  {% include 'partials/navbar.html' %}
 
   <div class="container">
 
