--- a/apps/restaurant/templates/products/pages/detail.html
+++ b/apps/restaurant/templates/products/pages/detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    {% include 'partials/_navbar.html' %}
+    {% include 'partials/navbar.html' %}
 
     <main class="container my-3">
 
