--- a/apps/restaurant/templates/products/pages/index.html
+++ b/apps/restaurant/templates/products/pages/index.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 
-    {% include 'partials/_navbar.html' %}
+    {% include 'partials/navbar.html' %}
 
     <main class="container-fluid my-5">
 
-        {% include '../partials/modal_new_product.html' %}
+        {% include '../partials/form_new_product.html' %}
 
         {% include '../partials/table_products.html' %}
 
