--- a/apps/restaurant/templates/products/partials/table_products.html
+++ b/apps/restaurant/templates/products/partials/table_products.html
@@ -1,4 +1,4 @@
-<h3 class="my-4">Lista de produtos</h3>
+<h3 class="title my-4">Lista de produtos</h3>
 
 {% include 'partials/message.html' %}
 
@@ -27,12 +27,12 @@
                         Sem categoria
                     {% endif %}
                 </td>
-                <td class="d-flex justify-content-around">
+                <td>
                     <form id="deleteForm" action="{% url 'restaurant:products_delete' product.pk %}" method="post">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-danger btn-sm">Deletar</button>
+                        <button type="submit" class="button">Deletar</button>
                     </form>
-                    <a href="{% url 'restaurant:products_detail' product.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                    <a href="{% url 'restaurant:products_detail' product.pk %}" class="button">Editar</a>
                 </td>
             </tr>
         {% endfor %}
