--- a/apps/restaurant/templates/purchases/partials/form_purchase.html
+++ b/apps/restaurant/templates/purchases/partials/form_purchase.html
@@ -1,30 +1,34 @@
 <div class="card">
   <div class="card-header">
-    Registrar compra de produtos
+    <div class="card-header-title">
+      Registrar compra de produtos
+    </div>
   </div>
-  <div class="card-body">
+  <div class="card-content">
     <form action="{% url 'restaurant:purchases_create' %}" method="post">
       {% csrf_token %}
-      <div class="row">
-        <div class="col-md-4">
-          <label for="product" class="form-label">Produto</label>
-          <select name="product" id="product" class="form-select">
-            {% for product in products %}
-              <option value="{{ product }}">{{ product }}</option>
-            {% endfor %}
-          </select>
+      <div class="columns">
+        <div class="column">
+          <label for="product" class="label">Produto</label>
+          <div class="select">
+            <select name="product" id="product">
+              {% for product in products %}
+                <option value="{{ product }}">{{ product }}</option>
+              {% endfor %}
+            </select>
+          </div>
         </div>
-        <div class="col-md-4">
-          <label for="quantity" class="form-label">Quantidade</label>
-          <input type="text" name="quantity" class="form-control">
+        <div class="column">
+          <label for="quantity" class="label">Quantidade</label>
+          <input type="text" name="quantity" class="input">
         </div>
-        <div class="col-md-4">
-          <label for="cost" class="form-label">Custo por produto</label>
-          <input type="text" name="cost" class="form-control">
+        <div class="column">
+          <label for="cost" class="label">Custo por produto</label>
+          <input type="text" name="cost" class="input">
         </div>
       </div>
   
-      <button type="submit" class="btn btn-success mt-3">Salvar</button>
+      <button type="submit" class="button is-primary">Salvar</button>
     </form>
   </div>
 </div>
