--- a/templates/partials/navbar_user.html
+++ b/templates/partials/navbar_user.html
@@ -1,15 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">USUÁRIOS</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="{% url 'user:profile' %}">Perfil</a>
-        <a class="nav-link" href="{% url 'user:get_all_users' %}">Lista</a>
-        <a class="nav-link" href="{% url 'user:logout' %}">Logout</a>
-      </div>
+{% load static %}
+<nav>
+    <div class="brand">
+        <img src="{% static 'img/logo.png' %}" alt="logomarca planeta das bebidas" class="my-2" width="100px">
     </div>
-  </div>
+    <ul>
+        <li><a class="nav-link" href="{% url 'user:profile' %}">Perfil</a></li>
+        <li><a class="nav-link" href="{% url 'user:get_all_users' %}">Lista</a></li>
+        <li><a class="nav-link" href="{% url 'user:logout' %}">Logout</a></li>
+    </ul>
 </nav>
