--- a/apps/restaurant/templates/products/pages/index.html
+++ b/apps/restaurant/templates/products/pages/index.html
@@ -5,7 +5,7 @@
 
     {% include 'partials/navbar.html' %}
 
-    <main class="container-fluid my-5">
+    <main class="container is-max-widescreen my-5">
 
         {% include '../partials/form_new_product.html' %}
 
