--- a/apps/user/templates/user/pages/index.html
+++ b/apps/user/templates/user/pages/index.html
@@ -2,12 +2,12 @@
 {% block title %}Lista de usuários{% endblock title %}
 {% block content %}
 
-  {% include 'partials/navbar_user.html' %}
+  {% include 'partials/navbar.html' %}
 
-  <div class="container-fluid mt-5">
-    <h1>Lista de usuários</h1>
+  <div class="container is-max-widescreen mt-5">
+    <h1 class="title">Lista de usuários</h1>
 
-    <table class="table">
+    <table class="table is-fullwidth">
       <thead>
         <tr>
           <th>Nome de usuário</th>
