--- a/apps/user/templates/user/pages/login.html
+++ b/apps/user/templates/user/pages/login.html
@@ -4,26 +4,28 @@
 
     <div class="card form-user">
         <div class="card-header">
-            <h1>Faça login</h1>
+            <div class="card-header-title">
+                Fazer login
+            </div>
         </div>
-        <div class="card-body">
+        <div class="card-content">
             <form action="{% url 'user:signin' %}" method="post">
                 {% csrf_token %}
                 <div class="row mb-3">
-                    <label for="email" class="col-sm-4 col-form-label mb-2">E-mail:</label>
+                    <label for="email" class="label mb-2">E-mail:</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" id="email" name="email">
+                        <input type="text" class="input" id="email" name="email">
                     </div>
 
-                    <label for="password" class="col-sm-4 col-form-label mb-2">Senha:</label>
+                    <label for="password" class="label mb-2">Senha:</label>
                     <div class="col-sm-8">
-                        <input type="password" class="form-control" id="password" name="password">
+                        <input type="password" class="input" id="password" name="password">
                     </div>
                 </div>
 
                 {% include 'partials/message.html' %}
 
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="button is-primary">Login</button>
                 <a class="ml-3" href="{% url 'user:register_view' %}">Criar conta</a>
             </form>
         </div>
