--- a/apps/user/templates/user/pages/profile.html
+++ b/apps/user/templates/user/pages/profile.html
@@ -1,23 +1,27 @@
 {% extends 'base.html' %}
-{% block title %}Profile{% endblock title %}
+{% block title %}Perfil{% endblock title %}
 
 {% block content %}
 
     {% include 'partials/navbar.html' %}
 
-    {% include 'partials/message.html' %}
+    <div class="container is-max-widescreen mt-5">
+        {% include 'partials/message.html' %}
 
-    <div class="card m-auto w-50 mt-5">
-        <div class="card-header">
-            <h4>Dados do usuário</h4>
+        <div class="card m-auto mt-5">
+            <div class="card-header">
+                <div class="card-header-title">
+                    <span class="pt-2">Dados do usuário</span>
+                    <a href="#" class="button is-success mt-3 ml-auto is-small">Editar</a>
+                </div>
+            </div>
+            <div class="card-content">
+                <h5>Nome de usuário:</h5>
+                <p>{{ request.user }}</p>
+                <h5>E-mail do usuário:</h5>
+                <p>{{ request.user.email }}</p>
+            </div>
         </div>
-        <div class="card-body">
-            <h5>Nome de usuário:</h5>
-            <p>{{ request.user }}</p>
-            <h5>Nome de e-mail:</h5>
-            <p>{{ request.user.email }}</p>
-        </div>
-        <a href="#" class="btn btn-primary disabled">Completar registro</a>
     </div>
 
 {% endblock content %}
