:sparkles: feat: CRUD finished

--- a/apps/crud/templates/books/partials/table_books.html
+++ b/apps/crud/templates/books/partials/table_books.html
@@ -4,6 +4,7 @@
       <th>Título</th>
       <th>Autor</th>
       <th>Número de páginas</th>
+      <th>Ações</th>
     </tr>
   </thead>
   <tbody>
@@ -12,6 +13,10 @@
         <td>{{ book.title }}</td>
         <td>{{ book.author }}</td>
         <td>{{ book.pages }}</td>
+        <td class="id-flex">
+          <a href="{% url 'crud:books_detail' book.pk %}" class="button is-warning is-small mr-2">Editar</a>
+          <a href="{% url 'crud:books_delete' book.pk %}" class="button is-danger is-small">Deletar</a>
+        </td>
       </tr>
     {% endfor %}
   </tbody>
