--- a/apps/crud/templates/books/pages/detail.html
+++ b/apps/crud/templates/books/pages/detail.html
@@ -5,11 +5,9 @@
   {% include 'partials/navbar.html' %}
 
   <div class="container is-max-widescreen mt-5">
-    <h1 class="title">Livros</h1>
+    <h1 class="title">Detalhes do livro</h1>
 
-    <a href="{% url 'crud:books_new' %}" class="button is-primary my-3">Cadastrar novo livro</a>
-
-    {% include '../partials/table_books.html' %}
+    {% include '../partials/form_book_detail.html' %}
   </div>
 
 {% endblock content %}
