--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -14,7 +14,7 @@
     
     <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="{% url 'crud:books_index' %}">Livros</a>
+            <a class="navbar-item" href="#">Home</a>
         </div>
     
         <div class="navbar-end">
