--- a/apps/books/templates/books/pages/index.html
+++ b/apps/books/templates/books/pages/index.html
@@ -5,7 +5,11 @@
   {% include 'partials/navbar.html' %}
 
   <div class="container is-max-widescreen mt-5">
-    <h1>Livros</h1>
+    <h1 class="title">Livros</h1>
+    <h2 class="subtitle">Listagem de todos os livros cadastrados</h2>
+    <div class="my-5">
+      {% include '../partials/table_books.html' %}
+    </div>
   </div>
 
 {% endblock content %}
