--- a/apps/books/templates/books/pages/index.html
+++ b/apps/books/templates/books/pages/index.html
@@ -7,6 +7,7 @@
   <div class="container is-max-widescreen mt-5">
     <h1 class="title">Livros</h1>
     <h2 class="subtitle">Listagem de todos os livros cadastrados</h2>
+    <a href="{% url 'books_create' %}" class="button is-success">Cadastrar livro</a>
     <div class="my-5">
       {% include '../partials/table_books.html' %}
     </div>
