--- a/apps/books/templates/books/partials/form_edit_book.html
+++ b/apps/books/templates/books/partials/form_edit_book.html
@@ -14,7 +14,7 @@
         </div>
         <div class="column">
           <label for="pages" class="label">Número de páginas</label>
-          <input type="number" name="pages" class="input" value="{{ book.author }}" required>
+          <input type="number" name="pages" class="input" value="{{ book.pages }}" required>
         </div>
       </div>
       <button type="submit" class="button is-success">Salvar</button>
