--- a/apps/books/templates/books/partials/table_books.html
+++ b/apps/books/templates/books/partials/table_books.html
@@ -3,7 +3,7 @@
     <tr>
       <th>Título</th>
       <th>Número de páginas</th>
-      <th>Author</th>
+      <th>Autor</th>
       <th>Opções</th>
     </tr>
   </thead>
