--- a/apps/books/templates/books/partials/table_books.html
+++ b/apps/books/templates/books/partials/table_books.html
@@ -22,7 +22,7 @@
   </tbody>
 </table>
 
-<nav class="pagination" role="pagination" aria-label="pagination">
+<nav class="pagination is-centered" role="pagination" aria-label="pagination">
 
   <ul class="pagination-list">
     {% if not page_obj.number == 1 %}
