--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
-    <!-- Jquery -->
-    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <!-- development: vue.js & production: vue.min.js -->
+    <script type="text/javascript" src="{% static 'vendor/vue/vue.js' %}"></script>
 </head>
 <body>
 
