:recycle: Refactor: Names

--- a/apps/vue/templates/vue/pages/index.html
+++ b/apps/vue/templates/vue/pages/index.html
@@ -21,7 +21,7 @@
 
 <!-- Como usar for -->
 <div id="app-4">
-  <h3>Lista de tarefas</h3>
+  <h3 class="subtitle mt-3">Lista de tarefas</h3>
   <ol>
     <li v-for="todo in todos">
       - [[ todo.text ]]
