Adding extra blocks to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block extra-meta %}{% endblock %}
     <title>{% block title %}{% endblock title %} - Django Boilerplate</title>
 
     <!-- Favicon -->
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <!-- development: vue.js & production: vue.min.js -->
     <script type="text/javascript" src="{% static 'vendor/vue/vue.js' %}"></script>
+    {% block extra-css %}{% endblock %}
 </head>
 <body>
 
@@ -21,5 +23,6 @@
     <!-- SCRIPTS -->
     <!-- Custom JS -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+    {% block extra-js %}{% endblock %}
 </body>
 </html>
