--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <!-- development: vue.js & production: vue.min.js -->
     <script type="text/javascript" src="{% static 'vendor/vue/vue.js' %}"></script>
+    <!-- Axios -->
+    <script type="text/javascript" src="{% static 'vendor/axios/axios.min.js' %}"></script>
     {% block extra-css %}{% endblock %}
 </head>
 <body>
