--- a/templates/base.html
+++ b/templates/base.html
@@ -5,18 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block extra-meta %}{% endblock %}
+    {% block meta %}{% endblock %}
     <title>{% block title %}{% endblock title %} - Django Boilerplate</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <!-- development: vue.js & production: vue.min.js -->
-    <script type="text/javascript" src="{% static 'vendor/vue/vue.js' %}"></script>
-    <!-- Axios -->
-    <script type="text/javascript" src="{% static 'vendor/axios/axios.min.js' %}"></script>
-    {% block extra-css %}{% endblock %}
+    {% block css %}{% endblock %}
 </head>
 <body>
 
@@ -25,6 +21,6 @@
     <!-- SCRIPTS -->
     <!-- Custom JS -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
-    {% block extra-js %}{% endblock %}
+    {% block js %}{% endblock %}
 </body>
 </html>
