--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,1 @@
-@import "../vendor/bulma/css/bulma.min.css";
-
-.form-user {
-    margin: auto;
-    margin-top: 200px;
-    width: 500px;
-}
+@import "../vendors/bootstrap/css/bootstrap.min.css";
