--- a/apps/users/templates/users/pages/register.html
+++ b/apps/users/templates/users/pages/register.html
@@ -2,6 +2,19 @@
 {% block title %}Registrar{% endblock title %}
 {% block content %}
 
-    {{ form }}
+    <div class="container">
+        
+        <div class="card w-50 m-auto">
+            <div class="card-body">
+                <h4 class="card-title">Criar conta</h4>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <button type="submit" class="btn btn-primary mt-3">Registrar</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
 
 {% endblock content %}
