--- a/apps/users/templates/form_snippet.html
+++ b/apps/users/templates/form_snippet.html
@@ -1,18 +1,20 @@
-{% for field in form %}
+<div class="row">
+    {% for field in form %}
+        <div class="col-md-6">
+            <div class="form-floating mt-3">
+                <input type="text" class="form-control" name="{{ field.html_name }}" placeholder="{{ field.label }}">
+                <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+            </div>
 
-    <div class="form-floating mt-3">
-        <input type="text" class="form-control" name="{{ field.html_name }}" placeholder="{{ field.label }}">
-        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-    </div>
-
-    {% if field.help_text %}
-        <p class="form-text">{{ field.help_text }}</p>
-    {% endif %}
-
-    {% if field.errors %}
-        {% for error in field.errors %}
-            {{ error }}
-        {% endfor %}
-    {% endif %}
-
-{% endfor %}
+            {% if field.help_text %}
+                <p class="form-text">{{ field.help_text }}</p>
+            {% endif %}
+        
+            {% if field.errors %}
+                {% for error in field.errors %}
+                    <p class="text-danger">{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+    {% endfor %}
+</div>
