--- a/apps/users/templates/form_snippet.html
+++ b/apps/users/templates/form_snippet.html
@@ -17,4 +17,10 @@
             {% endif %}
         </div>
     {% endfor %}
+
+    {% if messages %}
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    {% endif %}
 </div>
