Some feats and refactoring

--- a/apps/users/templates/form_snippet.html
+++ b/apps/users/templates/form_snippet.html
@@ -18,9 +18,5 @@
         </div>
     {% endfor %}
 
-    {% if messages %}
-        {% for message in messages %}
-            {{ message }}
-        {% endfor %}
-    {% endif %}
+    {% include 'partials/message.html' %}
 </div>
