--- a/apps/users/templates/users/pages/register.html
+++ b/apps/users/templates/users/pages/register.html
@@ -4,7 +4,7 @@
 
     <div class="container">
         
-        <div class="card w-75 m-auto">
+        <div class="card w-75 m-auto mt-5">
             <div class="card-header">
                 <h4 class="card-title">Criar conta</h4>
             </div>
