--- a/templates/partials/message.html
+++ b/templates/partials/message.html
@@ -1,5 +1,7 @@
 {% if messages %}
     {% for message in messages %}
-        {{ message }}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
     {% endfor %}
 {% endif %}
