--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block meta %}{% endblock meta %}
 
-    <title>{% block title %}{% endblock title %} - Boilerplate</title>
+    <title>{% block title %}{% endblock title %} - Django to-do app</title>
 
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block css %}{% endblock css %}
