:sparkles: feat: Added crud fbv app

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -12,7 +12,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'core:index' %}">Core</a></li>
-                        <li><a class="dropdown-item" href="#">FBV CRUD (soon)</a></li>
+                        <li><a class="dropdown-item" href="{% url 'crud_fbv:index' %}">FBV CRUD (in progress)</a></li>
                         <li><a class="dropdown-item" href="#">FBV CRUD (soon)</a></li>
                         <li><a class="dropdown-item" href="#">HTMX example (soon)</a></li>
                     </ul>
