feat: CRUD (wip) fn create done

--- a/apps/crud_fbv/templates/crud_fbv/partials/books_table.html
+++ b/apps/crud_fbv/templates/crud_fbv/partials/books_table.html
@@ -8,6 +8,13 @@
         </tr>
     </thead>
     <tbody>
-        
+        {% for book in books %}
+            <tr>
+                <td>{{ book.title }}</td>
+                <td>{{ book.author }}</td>
+                <td>{{ book.genre }}</td>
+                <td>R$ {{ book.price|floatformat:2 }}</td>
+            </tr>
+        {% endfor %}
     </tbody>
 </table>
