--- a/apps/crud_fbv/templates/crud_fbv/pages/index.html
+++ b/apps/crud_fbv/templates/crud_fbv/pages/index.html
@@ -7,6 +7,8 @@
     <div class="container mt-3">
         <h3>CRUD Function based views</h3>
 
+        <a href="{% url 'crud_fbv:create' %}" class="btn btn-outline-primary my-3">Cadastrar um livro</a>
+
         {% include '../partials/books_table.html' %}
     </div>
 
