--- a/apps/crud_fbv/templates/crud_fbv/partials/books_form.html
+++ b/apps/crud_fbv/templates/crud_fbv/partials/books_form.html
@@ -5,18 +5,17 @@
             {% if field.field.widget.input_type == 'select' %}
                 <select name="{{ field.html_name }}" class="form-select {% if field.errors %}is-invalid{% endif %}">
                     {% for genre in genres %}
-                        <option value="{{ genre.pk }}">{{ genre.name }}</option>
+                        <option value="{{ genre.pk }}" {% if book.genre == genre %}selected{% endif %}>
+                            {{ genre.name }}
+                        </option>
                     {% endfor %}
                 </select>
             {% else %}
                 <input
-                    type="text"
-                    name="{{ field.html_name }}"
-                    class="form-control {% if field.errors %}is-invalid{% endif %}"
-                    {% if field.value %}
-                        value="{{ field.value }}"
-                    {% endif %}
-                >
+                type="text"
+                name="{{ field.html_name }}"
+                class="form-control {% if field.errors %}is-invalid{% endif %}"
+                {% if field.value %}value="{{ field.value }}"{% endif %}>
             {% endif %}
             
             {{ field.help_text }}
