--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -13,7 +13,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'core:index' %}">Core</a></li>
                         <li><a class="dropdown-item" href="{% url 'crud_fbv:index' %}">FBV CRUD (in progress)</a></li>
-                        <li><a class="dropdown-item" href="#">FBV CRUD (soon)</a></li>
+                        <li><a class="dropdown-item" href="#">CBV CRUD (soon)</a></li>
                         <li><a class="dropdown-item" href="#">HTMX example (soon)</a></li>
                     </ul>
                 </li>
