refactor: Using UserCreation form

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -25,7 +25,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'user:profile' %}">Profile</a></li>
-                        <li><a class="dropdown-item" href="{% url 'user:logout' %}">Logout</a></li>
+                        <li><a class="dropdown-item" href="{% url 'user:signout' %}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
