--- a/apps/user/templates/user/pages/signin.html
+++ b/apps/user/templates/user/pages/signin.html
@@ -2,33 +2,21 @@
 {% block title %}Login{% endblock title %}
 {% block content %}
 
-    <div class="card form-user">
+    <div class="card user-form">
         <div class="card-header">
             <h1>Faça login</h1>
         </div>
         <div class="card-body">
             <form action="{% url 'user:signin' %}" method="post">
                 {% csrf_token %}
-                <div class="row mb-3">
-                    <label for="email" class="col-sm-4 col-form-label mb-2">E-mail:</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" id="email" name="email">
-                    </div>
 
-                    <label for="password" class="col-sm-4 col-form-label mb-2">Senha:</label>
-                    <div class="col-sm-8">
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                </div>
+                {% for field in form %}
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                    {{ field }}
+                {% endfor %}
 
-                {% if messages %}
-                    {% for message in messages %}
-                        {{ message }}<br>
-                    {% endfor %}
-                {% endif %}
-
-                <button type="submit" class="btn btn-primary">Login</button>
-                <a class="ml-3" href="{% url 'user:register_view' %}">Criar conta</a>
+                <button type="submit" class="btn btn-primary mt-3">Login</button>
+                <a class="ms-3" href="{% url 'user:signup' %}">Criar conta</a>
             </form>
         </div>
     </div>
