--- a/apps/user/templates/user/pages/signup.html
+++ b/apps/user/templates/user/pages/signup.html
@@ -2,43 +2,29 @@
 {% block title %}Registro{% endblock title %}
 {% block content %}
 
-    <div class="card form-user">
+    <div class="card user-form">
         <div class="card-header">
             <h1>Criar conta</h1>
         </div>
         <div class="card-body">
             <form action="{% url 'user:signup' %}" method="post">
                 {% csrf_token %}
-                <div class="row mb-3">
-                    <label for="email" class="col-sm-4 col-form-label mb-2">E-mail:</label>
-                    <div class="col-sm-8">
-                        <input type="email" class="form-control" id="email" name="email" required>
-                    </div>
 
-                    <label for="username" class="col-sm-4 col-form-label mb-2">Usuário:</label>
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" id="username" name="username" required>
-                    </div>
+                {% for field in form %}
+                    <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                    {{ field }}
 
-                    <label for="password" class="col-sm-4 col-form-label mb-2">Senha:</label>
-                    <div class="col-sm-8">
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
+                    {% if field.help_text %}
+                        <div class="form-text">{{ field.help_text }}</div>
+                    {% endif %}
 
-                    <label for="password2" class="col-sm-4 col-form-label mb-2">Repita a senha:</label>
-                    <div class="col-sm-8">
-                        <input type="password" class="form-control" id="password2" name="password2" required>
-                    </div>
-                </div>
+                    {% if field.errors %}
+                        <div class="form-text text-danger">{{ field.errors }}</div>
+                    {% endif %}
+                {% endfor %}
 
-                {% if messages %}
-                    {% for message in messages %}
-                        {{ message }}
-                    {% endfor %}
-                {% endif %}
-
-                <button type="submit" class="btn btn-primary">Cadastrar-se</button>
-                <a class="ml-3" href="{% url 'user:login_view' %}">Já tenho uma conta</a>
+                <button type="submit" class="btn btn-primary mt-3">Cadastrar-se</button>
+                <a class="ml-3" href="{% url 'user:signin' %}">Já tenho uma conta</a>
             </form>
         </div>
     </div>
