--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,2 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 @import url('../vendors/bootstrap/css/bootstrap.min.css');
+
+.user-form {
+    margin: 100px auto;
+    max-width: 500px;
+}
