--- a/apps/user/templates/user/pages/signup.html
+++ b/apps/user/templates/user/pages/signup.html
@@ -23,7 +23,7 @@
                     {% endif %}
                 {% endfor %}
 
-                <button type="submit" class="btn btn-primary mt-3">Cadastrar-se</button>
+                <button type="submit" class="btn btn-primary mt-3">Criar conta</button>
                 <a class="ml-3" href="{% url 'user:signin' %}">Já tenho uma conta</a>
             </form>
         </div>
